; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/wireless/ath/ath5k/extr_debug.c_release_file_eeprom.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/wireless/ath/ath5k/extr_debug.c_release_file_eeprom.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.inode = type { i32 }
%struct.file = type { %struct.eeprom_private* }
%struct.eeprom_private = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.inode*, %struct.file*)* @release_file_eeprom to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @release_file_eeprom(%struct.inode* %0, %struct.file* %1) #0 {
  %3 = alloca %struct.inode*, align 8
  %4 = alloca %struct.file*, align 8
  %5 = alloca %struct.eeprom_private*, align 8
  store %struct.inode* %0, %struct.inode** %3, align 8
  store %struct.file* %1, %struct.file** %4, align 8
  %6 = load %struct.file*, %struct.file** %4, align 8
  %7 = getelementptr inbounds %struct.file, %struct.file* %6, i32 0, i32 0
  %8 = load %struct.eeprom_private*, %struct.eeprom_private** %7, align 8
  store %struct.eeprom_private* %8, %struct.eeprom_private** %5, align 8
  %9 = load %struct.eeprom_private*, %struct.eeprom_private** %5, align 8
  %10 = getelementptr inbounds %struct.eeprom_private, %struct.eeprom_private* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = call i32 @vfree(i32 %11)
  %13 = load %struct.eeprom_private*, %struct.eeprom_private** %5, align 8
  %14 = call i32 @kfree(%struct.eeprom_private* %13)
  ret i32 0
}

declare dso_local i32 @vfree(i32) #1

declare dso_local i32 @kfree(%struct.eeprom_private*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
